@@ -1,3 +1,8 @@
+2007-12-19 19:03-EST Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormGormWrapperLoader.m
+	* GormCore/GormNibWrapperBuilder.m: Correction for bug#21845.
+
 2007-12-04 20:52-EST Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* English.lproj/GormViewSizeInspector.gorm: Correction for
